--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "git": "^0.1.5",
     "mongoose": "^6.6.6",
