--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "git": "^0.1.5",
+    "html": "^1.0.0",
     "mongoose": "^6.6.6",
     "nodemon": "^2.0.20",
     "react": "^18.2.0"
