--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "git": "^0.1.5",
     "mongoose": "^6.6.6",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0"
   }
