--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "create-react-app": "^5.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "git": "^0.1.5",
     "mongoose": "^6.6.6",
+    "mui": "^0.0.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0"
