--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.15",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "create-react-app": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "git": "^0.1.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6",
     "mui": "^0.0.1",
     "nodemailer": "^6.8.0",
