--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
     "mui-markdown": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.4",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.4",
     "react-player": "^2.11.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
