--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@date-io/jalaali": "^2.16.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.12",
     "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -15,6 +17,8 @@
     "express-session": "^1.17.3",
     "git": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
     "mongoose": "^6.6.6",
     "mui": "^0.0.1",
     "nodemailer": "^6.8.0",
