--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/joy": "^5.0.0-alpha.58",
     "@mui/material": "^5.11.0",
     "@mui/x-data-grid-generator": "^5.17.15",
+    "@mui/x-date-pickers": "^5.0.12",
     "@react-pdf/renderer": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
